[metadata]
name = pymso5000-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = Rigol MSO5000 control library (unofficial)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/pymso5000
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	pylabdevs-tspspi >= 0.0.5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	mso5000fetch = pymso5000.fetchmso5000:main
